Fix spillage color

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -165,6 +165,10 @@ html, body
 .conveyor-belt
     color: #555555
 
+.spillage
+    pre
+        color: blue
+
 .label
     position: absolute
     border: 1px solid black
